mod : userName 받는 메소드추가